--- a/src/app/pages/croissant/croissant.component.scss
+++ b/src/app/pages/croissant/croissant.component.scss
@@ -8,7 +8,7 @@ img{
     height: 240px;
 }
 .main{
-    max-width: 1200px;
+    min-height: 100vh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -18,29 +18,31 @@ img{
             margin: 30px;
             margin-bottom: 40px;
             position: relative;
-            width: 310px;
-            height: 310px;
-            background: #fff;
+            width: 380px;
+            height: 380px;
+            background: rgba(0,0,0,0);
             display: flex;
             justify-content: center;
             align-items: center;
             transition: .5s;
-            border-radius: 50%;
+            // border-radius: 50%;
+            border: 0px;
             &:before{
                 content: "";
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(rgba(0, 0, 0, .8),white);
+                // background: linear-gradient(rgba(84, 238, 212, 0),white);
                 z-index: 1;
                 transition: .5s;
-                border-radius: 50%;
+                // border-radius: 50%;
             }
             &:hover:before{
-                    background: linear-gradient(rgba(0, 0, 0, .4),white);
+                    // background: linear-gradient(rgba(42, 241, 2, 0),white);
                     transform: scaleY(1);
-                    box-shadow: 0 20px 50px rgba(0,0,0,.2);
+                    box-shadow: 0 20px 50px rgba(0,0,0,.7);
                     filter: blur(0px);
+                    border: 0px
             }  
             .content{
                 text-align: center;
@@ -75,4 +77,124 @@ img{
     margin-top: 5px;
     font-family: cursive;
 }
+h3{
+    color: darkorange;
+}
 
+
+
+
+
+
+
+
+
+
+.buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    width: 100%;
+    height: 40vh;
+    button{
+        background: rgba(77, 118, 192, 0.404);
+        position: relative;
+        padding: 20px 30px;
+        font-size: 30px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        box-shadow: 0 20px 50px rgba(0,0,0,.5);
+        overflow: hidden;
+        &:hover{
+            background: rgba(43, 253, 1, 0.4);
+        }
+        &:hover span:nth-child(1){
+            background: linear-gradient(to right, rgb(19, 58, 3) , rgb(78, 241, 2));
+        }
+        &:hover span:nth-child(2){
+            background: linear-gradient(to right, rgb(19, 58, 3) , rgb(78, 241, 2));
+        }
+        &:hover span:nth-child(3){
+            background: linear-gradient(to right, rgb(19, 58, 3) , rgb(78, 241, 2));
+        }
+        &:hover span:nth-child(4){
+            background: linear-gradient(to right, rgb(19, 58, 3) , rgb(78, 241, 2));
+        }
+        span{
+            &:nth-child(1){
+                position: absolute;
+                top:0;
+                left: 0;
+                width: 100%;
+                height: 3px;
+                background: linear-gradient(to right, blue , aqua);
+                animation: animated1 2s linear infinite;
+            }
+            @keyframes animated1 {
+                0%{
+                    transform: translateX(-100%);
+                }
+                100%{
+                    transform: translateX( 100%);
+                }
+            }
+            &:nth-child(2){
+                position: absolute;
+                top:0;
+                right: 0;
+                width: 3px;
+                height: 100%;
+                background: linear-gradient(to bottom, blue , aqua);
+                animation: animated2 2s linear infinite;
+                animation-delay: 1s;
+
+            }
+            @keyframes animated2 {
+                0%{
+                    transform: translateY(-100%);
+                }
+                100%{
+                    transform: translateY( 100%);
+                }
+            }
+            &:nth-child(3){
+                position: absolute;
+                bottom :0;
+                left: 0;
+                width: 100%;
+                height: 3px;
+                background: linear-gradient(to left, blue , aqua);
+                animation: animated3 2s linear infinite;
+            }
+            @keyframes animated3 {
+                0%{
+                    transform: translateX( 100% );
+                }
+                100%{
+                    transform: translateX( -100% );
+                }
+            }
+            &:nth-child(4){
+                position: absolute;
+                top:0;
+                left: 0;
+                width: 3px;
+                height: 100%;
+                background: linear-gradient(to top, blue , aqua);
+                animation: animated4 2s linear infinite;
+                animation-delay: 1s;
+            }
+            @keyframes animated4 {
+                0%{
+                    transform: translateY( 100%);
+                }
+                100%{
+                    transform: translateY( -100%);
+                }
+            }
+        }
+    }
+}
