--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,9 +4,8 @@
     box-sizing: border-box;
     min-height: 100vh;
     background-image: url(https://graphiccloud.net/wp-content/uploads/2019/04/Painted-Brick-Textures-Pack.jpg);
-    // background: white;
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
 }
