--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
 
         </div>
         <div class="social">
-
+            <iframe src="https://www.google.com/maps/d/embed?mid=1s2C_KXO1Fblpwxgnnwj6cCw0EtXvBB6E" width="640" height="480"></iframe>
         </div>
     </section>
 </div>
