--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap" data-aos="fade-up" data-aos-duration="1000">
           <carousel>
             <slide>
               <img src="/assets/images/2.jpg" alt="first slide" style="display: block;">
@@ -23,3 +23,20 @@
             </slide>
           </carousel>
 </div>
+<div class="history" >
+    <div class="text" >
+      <h3 class="titleHistory">Історія круасана
+
+      </h3>
+  
+     <p class="description"> Коли захоплений своєю справою кулінар винаходить нову страву, це ні в кого не викликає здивування. Але з кожного правила є виключення.
+
+      Таким виключенням став виріб з тіста незвичайної форми– круасан. Історія цього пекарського витвору заслуговує на увагу і починається задовго до того часу, коли в голову людині, яка замісила тісто, прийшла ідея загорнути його таким оригінальним способом. Незалежно від франкомовної назви та надзвичайної популярності цього виробу у Франції, згідно з однією з історичних версій, круасани вперше виготовили у Відні в 1689 році.</p>
+
+    </div>
+    <div class="image" data-aos="fade-up" data-aos-duration="2000" >
+      <img  src="https://www.lviv-croissants.com/wp-content/uploads/2019/02/chocolate.png" alt="">
+    </div>
+
+</div>
+
