--- a/src/app/admin/admin-croissant/admin-croissant.component.html
+++ b/src/app/admin/admin-croissant/admin-croissant.component.html
@@ -24,8 +24,8 @@
             <th> {{ croissant.name }}</th>
             <th> {{ croissant.ingredients }}</th>
             <th> {{ croissant.price }}</th>
-            <th> No image </th>
-            <th> <button type="button" class="btn btn-warning" (click)="editCroissant(croissant)">Edit</button> </th>
+            <th class="image"> <img [src]="croissant.image" alt=""></th>
+            <th> <button type="button" class="btn btn-warning" (click)="editCroissant(croissant, template)">Edit</button> </th>
             <th> <button type="button" class="btn btn-danger" [disabled]="editStatus" (click)="deleteCroissant(croissant)">Delete</button> </th>
           </tr>
         </tbody>
@@ -62,6 +62,27 @@
       <div class="price">
         <h4>Price</h4>
         <input type="number" class="form-control" [(ngModel)]="PriceCroissant" name="PriceCroissant" >
+      </div>
+      <div class="form-group row">
+        <div class="card-body">
+          <h5 class="card-title">Select a file for upload:</h5>
+          <!-- <input type="file" (change)="upload($event)" accept=".png,.jpg" /> -->
+          <input type="file" (change)="upload($event)" accept=".png,.jpg" />
+          <br><br>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [style.width]="(uploadProgress | async) + '%'" [attr.aria-valuenow]="(uploadProgress | async)" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <br>
+          <div *ngIf="downloadURL | async; let downloadSrc" class="alert alert-info" role="alert">
+              File uploaded: <a [href]="downloadSrc">{{downloadSrc}}</a>
+          </div>
+          <br>
+          <div class="btn-group" role="group" *ngIf="uploadState | async; let state">
+              <button type="button" class="btn btn-primary" (click)="task.pause()" [disabled]="state === 'paused'">Pause</button>
+              <button type="button" class="btn btn-primary" (click)="task.cancel()" [disabled]="!(state === 'paused' || state === 'running')">Cancel</button>
+              <button type="button" class="btn btn-primary" (click)="task.resume()" [disabled]="state === 'running'">Resume</button>
+          </div>
+        </div>
       </div>
       <div class="button">
         <button type="button" class="btn btn-success" (click)="addCroissant()">add</button>
