--- a/src/app/pages/croissant/croissant.component.html
+++ b/src/app/pages/croissant/croissant.component.html
@@ -18,7 +18,7 @@
   <div class="card" *ngFor="let croissant of croissants ">
     <div class="content">
       <div class="price">{{ croissant.price | currency:'$' }}</div>
-      <img [routerLink]="[ '/croissant', croissant.id ]" src="https://www.lviv-croissants.com/wp-content/uploads/2019/07/Filadelfiya-z-Ovochamy.png" alt="">
+      <img [routerLink]="[ '/croissant', croissant.id ]" [src] = "croissant.image" alt="">
       <h3>{{ croissant.name | uppercase }}</h3>
       <p class="ingredients">{{ croissant.ingredients }}</p>
     </div>
