--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,3 +8,57 @@ img{
     width: 100%;
     height: 84vh;
 }
+.history{
+
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.image{
+
+    position: absolute;
+    top: 13%;
+    left: 25%;
+    width: 50%;
+    height: 30vh;
+    z-index: 0;
+    transform: translate(-50%,-50%);
+}
+.text{
+    
+    width: 100%;
+    height: 100%;
+    padding: 15%;
+    background: rgba(0,0,0,.7);
+    color: rgb(10, 243, 243);
+    position: absolute;
+    z-index: 1;
+    letter-spacing: 2px;
+    font-size: 18px;
+    text-align: center;
+
+}
+.description{
+
+    &:hover{
+        color: black;
+        font-weight: bold;
+        background: rgb(10, 243, 243,.5);
+        box-shadow: 0 0 5px rgb(10, 243, 243);
+        box-shadow: 0 0 25px rgb(10, 243, 243);
+        box-shadow: 0 0 50px rgb(10, 243, 243);
+        box-shadow: 0 0 200px rgb(10, 243, 243);
+        border-radius: 50%;
+        transition: .5s;
+        
+    }
+    
+}
+
+
+
+
+   
