--- a/src/app/pages/product-detalis/product-detalis.component.html
+++ b/src/app/pages/product-detalis/product-detalis.component.html
@@ -1,8 +1,27 @@
-<div class="card">
-    <div class="content">
-      <div class="price">{{ view?.price | currency:'$' }}</div>
-      <img  src="https://www.lviv-croissants.com/wp-content/uploads/2019/07/Filadelfiya-z-Ovochamy.png" alt="">
-      <h3>{{ view?.name | uppercase }}</h3>
-      <p class="ingredients">{{ view?.ingredients }}</p>
-    </div>
+<div class="box">
+  <div class="image">
+    <img src="https://www.lviv-croissants.com/wp-content/uploads/2019/07/Filadelfiya-z-Ovochamy.png" alt="">
   </div>
+  <div class="info">
+    <h3>{{ view?.price}}</h3>
+    <h3>{{ view?.name}}</h3>
+    <h3>{{ view?.ingredients }}</h3>
+  </div>
+</div>
+<div>
+  <h3>{{ croissantsRandom?.price}}</h3>
+    <h3>{{ croissantsRandom?.name}}</h3>
+    <h3>{{ croissantsRandom?.ingredients }}</h3>
+</div>
+<div>
+  <h3>{{ croissantsRandom1?.price}}</h3>
+    <h3>{{ croissantsRandom1?.name}}</h3>
+    <h3>{{ croissantsRandom1?.ingredients }}</h3>
+</div>
+<div>
+  <h3>{{ croissantsRandom2?.price }}</h3>
+    <h3>{{ croissantsRandom2?.name }}</h3>
+    <h3>{{ croissantsRandom2?.ingredients }}</h3>
+</div>
+
+
