--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,6 +5,9 @@
   <li class="nav-item">
     <a class="nav-link" routerLinkActive="active" [routerLink]="[ 'admin-croissant' ]" >Croissant</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLinkActive="active" [routerLink]="[ 'admin-drink' ]" >Drink</a>
+  </li>
 </ul>
 <div>
     <router-outlet></router-outlet>
