--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -42,7 +42,6 @@ img{
 
 }
 .description{
-
     &:hover{
         color: black;
         font-weight: bold;
@@ -51,7 +50,7 @@ img{
         box-shadow: 0 0 25px rgb(10, 243, 243);
         box-shadow: 0 0 50px rgb(10, 243, 243);
         box-shadow: 0 0 200px rgb(10, 243, 243);
-        border-radius: 50%;
+        border-radius: 10px;
         transition: .5s;
         
     }
