--- a/src/app/pages/product-detalis/product-detalis.component.scss
+++ b/src/app/pages/product-detalis/product-detalis.component.scss
@@ -5,11 +5,16 @@ img{
     height: 100vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 .image{
     width: 50%;
     }
 .info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 50%;
 }
