--- a/src/app/pages/your-croissant/your-croissant.component.html
+++ b/src/app/pages/your-croissant/your-croissant.component.html
@@ -1,1 +1,27 @@
-<p>your-croissant works!</p>
+<div class="row">
+    <div class="col-xs-6 col-6 col-md-5 col-lg-3">
+      <bs-sortable
+      
+        [(ngModel)]="ingridients"
+        fieldName = "name"
+        itemClass="sortable-item"
+        itemActiveClass="sortable-item-active"
+        placeholderItem="Drag here"
+        placeholderClass="placeholderStyle"
+        wrapperClass="sortable-wrapper"
+        ></bs-sortable>
+      <!-- <pre class="code-preview">{{ itemObjectsLeft | json }}</pre> -->
+    </div>
+    <div class="col-xs-6 col-6 col-md-5 col-lg-3">
+      <bs-sortable
+        [(ngModel)]="itemObjectsRight"
+        fieldName = "name"
+        itemClass="sortable-item"
+        itemActiveClass="sortable-item-active"
+        placeholderItem="Drag here"
+        placeholderClass="placeholderStyle"
+        wrapperClass="sortable-wrapper"
+      ></bs-sortable>
+      <pre class="code-preview">{{ itemObjectsRight | json }}</pre>
+    </div>
+  </div>
