--- a/src/app/pages/your-croissant/your-croissant.component.html
+++ b/src/app/pages/your-croissant/your-croissant.component.html
@@ -1,27 +1,28 @@
-<div class="row">
-    <div class="col-xs-6 col-6 col-md-5 col-lg-3">
-      <bs-sortable
-      
-        [(ngModel)]="ingridients"
-        fieldName = "name"
-        itemClass="sortable-item"
-        itemActiveClass="sortable-item-active"
-        placeholderItem="Drag here"
-        placeholderClass="placeholderStyle"
-        wrapperClass="sortable-wrapper"
-        ></bs-sortable>
-      <!-- <pre class="code-preview">{{ itemObjectsLeft | json }}</pre> -->
-    </div>
-    <div class="col-xs-6 col-6 col-md-5 col-lg-3">
-      <bs-sortable
-        [(ngModel)]="itemObjectsRight"
-        fieldName = "name"
-        itemClass="sortable-item"
-        itemActiveClass="sortable-item-active"
-        placeholderItem="Drag here"
-        placeholderClass="placeholderStyle"
-        wrapperClass="sortable-wrapper"
-      ></bs-sortable>
-      <pre class="code-preview">{{ itemObjectsRight | json }}</pre>
-    </div>
+
+<div class="example-container">
+  <h2>Інгрідієнти</h2>
+
+  <div
+    cdkDropList
+    #todoList="cdkDropList"
+    [cdkDropListData]="ingridients"
+    [cdkDropListConnectedTo]="[doneList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let ingridient of ingridients" cdkDrag><img [src]="ingridient.image"><p>{{ingridient.name}}</p></div>
   </div>
+</div>
+
+<div class="example-container">
+  <h2>Вибрані</h2>
+
+  <div
+    cdkDropList
+    #doneList="cdkDropList"
+    [cdkDropListData]="done"
+    [cdkDropListConnectedTo]="[todoList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let ingridient of done" cdkDrag><img [src]="ingridient.image"><p>{{ingridient.name}}</p></div>
+  </div>
+</div>
