Add basket modal

--- a/src/app/pages/drinks/drinks.component.html
+++ b/src/app/pages/drinks/drinks.component.html
@@ -4,7 +4,7 @@
         <img [src]="drink.image" alt="">
         <p class="name">{{ drink.name }}</p>
         <span class="button"> 
-            <button class="btn btn-success">Add to Basket</button>
+            <button class="btn btn-success" (click)="addBasket(drink)">Add to Basket</button>
         </span>
     </div>
 </div>
