--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,10 +26,10 @@
           <span>Your Croissant</span>
         </a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="[ '/basket' ]">
+      <li class="nav-item" >
+        <a class="nav-link" (click)="openModal(template)" >
           <img src="assets/images/basket.png" alt="" srcset="">
-          <span>Basket</span>
+          <span class="basket"> Basket {{arrBasket.length}} {{sum}}</span>
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
@@ -37,4 +37,23 @@
         </li>
     </ul>
   </div>
+  <ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">У кошику</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body" >
+      <div class="product" *ngFor="let basket of arrBasket; let i=index">
+          <span> {{ i+1 }} </span>
+          <img class="image" [src]="basket.image" alt="">
+          <span class="name">{{ basket.name }}
+          </span>
+          <span class="price">{{ basket.price }}</span>
+          <button type="button" class="close pull-right" aria-label="Close" ><span aria-hidden="true" (click)="deleteProduct(i)">&times;</span> </button>
+      </div>
+      
+    </div>
+  </ng-template>
 </nav>
