--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -19,3 +19,40 @@ a{
         transition: 0.5s;
     }
 }
+.basket{
+    color:lightseagreen;
+    cursor: pointer;
+    &:hover{
+        color: red;
+        transition: 0.5s;
+    }
+}
+.image{
+    width: 30%;
+}
+.product{
+    display: flex;
+    justify-content: space-around;
+}
+.price{
+    display: flex;
+    align-items: center;
+    font-family: cursive;
+    font-size: 20px;
+    color: green;
+
+}
+
+.name{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: cursive;
+    font-size: 20px;
+}
+
+
+
+
+
