--- a/src/app/pages/your-croissant/your-croissant.component.scss
+++ b/src/app/pages/your-croissant/your-croissant.component.scss
@@ -1,14 +1,15 @@
 .example-container {
     width: 15%;
+    height: 100%;
     max-width: 100%;
-    margin: 0 25px 25px 0;
+    margin: 20px;
     display: inline-block;
     vertical-align: top;
   }
   
   .example-list {
-    border: solid 1px #ccc;
-    min-height: 60px;
+    border: solid 1px rgb(8, 103, 211);
+    min-height: 600px;
     border-radius: 4px;
     overflow: hidden;
     display: block;
@@ -16,12 +17,12 @@
   
   .example-box {
     padding: 5px;
-    border-bottom: solid 1px #ccc;
+    border: solid 1px rgb(8, 103, 211);
     color: rgba(0, 0, 0, 0.87);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     box-sizing: border-box;
     cursor: move;
     font-size: 14px;
@@ -53,5 +54,8 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   img{
-    width: 50%;
+    width: 45%;
+  }
+  .croissant{
+    margin: 50px;
   }
